--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -401,36 +401,36 @@ jobs:
       - revert-migrations
 
 
-  # cleanup:
-  #   docker:
-  #     - image: amazon/aws-cli
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           yum -y install tar gzip
-  #     - run:
-  #         name: Get old stack workflow id
-  #         command: |
-  #           export OldWorkflowID=$(aws cloudformation \
-  #           list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-  #           --no-paginate --output text)
-  #           echo "OldWorkflowID: ${OldWorkflowID}"
-  #           # Fetch the stack names          
-  #           export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-  #                   --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
-  #           echo "${STACKS}"
-  #           if [[ "${STACKS[@]}" != "${OldWorkflowID}" ]]
-  #           then
-  #             echo "start clean up"
-  #             aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-  #             aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-  #           else 
-  #             echo "Cannot cleanup"
-  #           fi 
-  #     - revert-migrations
-  #     - destroy-environment
+  cleanup:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            yum -y install tar gzip
+      - run:
+          name: Get old stack workflow id
+          command: |
+            export OldWorkflowID=$(aws cloudformation \
+            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+            --no-paginate --output text)
+            echo "OldWorkflowID: ${OldWorkflowID}"
+            # Fetch the stack names          
+            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                    --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+            echo "${STACKS}"
+            if [[ "${STACKS[@]}" != "${OldWorkflowID}" ]]
+            then
+              echo "start clean up"
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+            else 
+              echo "Cannot cleanup"
+            fi 
+      - revert-migrations
+      - destroy-environment
   
 
 
@@ -465,6 +465,8 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront_update]
       # - add-prometheus-node-exporter:
       #     requires: [smoke-test]
 
