--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,252 +185,252 @@ jobs:
  
 
 
-  configure-infrastructure:
-    docker:
-      - image: python:3.7-alpine3.11
-    steps:
-      - checkout
-      - add_ssh_keys:
-          fingerprints: ["3d:6f:ed:aa:fb:e6:7e:63:b9:d9:47:99:e3:79:70:5d"]
-      - attach_workspace:
-          at: ~/
-      - run:
-          name: Install dependencies
-          command: |
-           pip install --upgrade pip
-           pip install awscli
-           apk add ansible
-      - run:
-          name: Cat inventory
-          command: |
-            cd .circleci/ansible/
-            cat inventory.txt
-      - run:
-          name: Configure server
-          command: |
-            cd .circleci/ansible/
-            ansible-playbook configure-server.yml -i inventory.txt
-      - destroy-environment
+  # configure-infrastructure:
+  #   docker:
+  #     - image: python:3.7-alpine3.11
+  #   steps:
+  #     - checkout
+  #     - add_ssh_keys:
+  #         fingerprints: ["3d:6f:ed:aa:fb:e6:7e:63:b9:d9:47:99:e3:79:70:5d"]
+  #     - attach_workspace:
+  #         at: ~/
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #         pip install --upgrade pip
+  #         pip install awscli
+  #         apk add ansible
+  #     - run:
+  #         name: Cat inventory
+  #         command: |
+  #           cd .circleci/ansible/
+  #           cat inventory.txt
+  #     - run:
+  #         name: Configure server
+  #         command: |
+  #           cd .circleci/ansible/
+  #           ansible-playbook configure-server.yml -i inventory.txt
+  #     - destroy-environment
 
 
-  run-migrations:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [backend-build]
-      - run:
-          name: Install dependencies
-          command: |
-            sudo apt update
-            sudo apt install -y awscli
+  # run-migrations:
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     - checkout
+  #     - restore_cache:
+  #         keys: [backend-build]
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           sudo apt update
+  #           sudo apt install -y awscli
 
-      - run:
-          name: Run migrations
-          command: |
-            cd backend
-            npm install
-            npm run build
-            npm run migrations >> migrations_dump.txt
-            ls -al
-            cat migrations_dump.txt
-      - run:
-          name: Send migration results to kvdb
-          command: |
-            if grep -q "migrations" ~/project/backend/migrations_dump.txt
-            then
-              curl --insecure https://kvdb.io/75noLo4rCTw4gY2AjR7ikp/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
-            fi
-      - destroy-environment
+  #     - run:
+  #         name: Run migrations
+  #         command: |
+  #           cd backend
+  #           npm install
+  #           npm run build
+  #           npm run migrations >> migrations_dump.txt
+  #           ls -al
+  #           cat migrations_dump.txt
+  #     - run:
+  #         name: Send migration results to kvdb
+  #         command: |
+  #           if grep -q "migrations" ~/project/backend/migrations_dump.txt
+  #           then
+  #             curl --insecure https://kvdb.io/75noLo4rCTw4gY2AjR7ikp/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+  #           fi
+  #     - destroy-environment
 
 
-  deploy-frontend:
-    docker:
-      - image: python:alpine3.16
-    steps:
-      - checkout
-      - attach_workspace:
-          at: ~/
+  # deploy-frontend:
+  #   docker:
+  #     - image: python:alpine3.16
+  #   steps:
+  #     - checkout
+  #     - attach_workspace:
+  #         at: ~/
 
-      - run:
-          name: Install image dependencies
-          command: |
-            apk add --update tar gzip ansible nodejs npm curl
-      - run:
-          name: Install AWS CLI
-          command: |
-            pip install awscli
-      - run:
-          name: Install frontend dependencies
-          command: |
-            cd frontend
-            npm install
-      - run:
-          name: Get backend url
-          command: |
-            export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "API_URL=${API_URL}" >> frontend/.env
-            echo "API_URL=http://${BACKEND_IP}:3030" >> frontend/.env
-            cat frontend/.env
-      - run:
-          name: Deploy frontend objects 
-          command: |
-            cd frontend
-            npm run build
-            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-            echo "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}"
-      - revert-migrations
-      - destroy-environment
+  #     - run:
+  #         name: Install image dependencies
+  #         command: |
+  #           apk add --update tar gzip ansible nodejs npm curl
+  #     - run:
+  #         name: Install AWS CLI
+  #         command: |
+  #           pip install awscli
+  #     - run:
+  #         name: Install frontend dependencies
+  #         command: |
+  #           cd frontend
+  #           npm install
+  #     - run:
+  #         name: Get backend url
+  #         command: |
+  #           export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+  #           export API_URL="http://${BACKEND_IP}:3030"
+  #           echo "API_URL=${API_URL}" >> frontend/.env
+  #           echo "API_URL=http://${BACKEND_IP}:3030" >> frontend/.env
+  #           cat frontend/.env
+  #     - run:
+  #         name: Deploy frontend objects 
+  #         command: |
+  #           cd frontend
+  #           npm run build
+  #           tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+  #           aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+  #           echo "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}"
+  #     - revert-migrations
+  #     - destroy-environment
 
-  deploy-backend:
-    docker:
-      - image: python:alpine3.16
-    steps:
-      - checkout
-      - add_ssh_keys:
-          fingerprints: 
-            - "3d:6f:ed:aa:fb:e6:7e:63:b9:d9:47:99:e3:79:70:5d"
-      - attach_workspace:
-          at: ~/
+  # deploy-backend:
+  #   docker:
+  #     - image: python:alpine3.16
+  #   steps:
+  #     - checkout
+  #     - add_ssh_keys:
+  #         fingerprints: 
+  #           - "3d:6f:ed:aa:fb:e6:7e:63:b9:d9:47:99:e3:79:70:5d"
+  #     - attach_workspace:
+  #         at: ~/
 
-      - run:
-          name: Install dependencies
-          command: |
-            pip install --upgrade pip
-            pip install awscli
-            apk add --update nodejs npm ansible zip
-      - run:
-          name: Deploy backend
-          no_output_timeout: 30m
-          command: |
-            echo ENVIRONMENT=production >> "backend/.env"
-            echo TYPEORM_CONNECTION=postgres >> "backend/.env"
-            echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
-            echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> "backend/.env"
-            echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
-            echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
-            echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
-            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
-            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
-            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
-            cat backend/.env
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           pip install --upgrade pip
+  #           pip install awscli
+  #           apk add --update nodejs npm ansible zip
+  #     - run:
+  #         name: Deploy backend
+  #         no_output_timeout: 30m
+  #         command: |
+  #           echo ENVIRONMENT=production >> "backend/.env"
+  #           echo TYPEORM_CONNECTION=postgres >> "backend/.env"
+  #           echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
+  #           echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> "backend/.env"
+  #           echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
+  #           echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
+  #           echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
+  #           echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
+  #           echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
+  #           echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
+  #           cat backend/.env
             
-            tar -C backend -czvf artifact.tar.gz .
-            ls -la
-            cd .circleci/ansible
-            cat inventory.txt
-            export ANSIBLE_HOST_KEY_CHECKING=False
-            ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy-environment
+  #           tar -C backend -czvf artifact.tar.gz .
+  #           ls -la
+  #           cd .circleci/ansible
+  #           cat inventory.txt
+  #           export ANSIBLE_HOST_KEY_CHECKING=False
+  #           ansible-playbook -i inventory.txt deploy-backend.yml
+  #     - destroy-environment
 
-  smoke-test:
-    docker:
-      - image: python:alpine3.16
-    steps:
-      - checkout
-      - attach_workspace:
-          at: ~/
-      - run:
-          name: Install image dependencies
-          command: |
-            apk add --update curl nodejs npm
-            pip install awscli
+  # smoke-test:
+  #   docker:
+  #     - image: python:alpine3.16
+  #   steps:
+  #     - checkout
+  #     - attach_workspace:
+  #         at: ~/
+  #     - run:
+  #         name: Install image dependencies
+  #         command: |
+  #           apk add --update curl nodejs npm
+  #           pip install awscli
 
-      - run:
-          name: Get backend url and perform smoke test on the backend server
-          command: |
-            export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "API URL: ${API_URL}"
-            echo "Wait for backend to become available..."
-            sleep 180s
-            echo "Attempting to reach backend..."
-            if curl "${API_URL}/api/status" | grep "ok"
-            then
-              echo "Backend status OK"
-              exit 0
-            else
-              echo "Backend status NOT OK"
-              exit 1
-            fi
+  #     - run:
+  #         name: Get backend url and perform smoke test on the backend server
+  #         command: |
+  #           export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+  #           export API_URL="http://${BACKEND_IP}:3030"
+  #           echo "API URL: ${API_URL}"
+  #           echo "Wait for backend to become available..."
+  #           sleep 180s
+  #           echo "Attempting to reach backend..."
+  #           if curl "${API_URL}/api/status" | grep "ok"
+  #           then
+  #             echo "Backend status OK"
+  #             exit 0
+  #           else
+  #             echo "Backend status NOT OK"
+  #             exit 1
+  #           fi
 
-      - run:
-          name: Frontend smoke test
-          command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-            echo ${URL} 
-            if curl -s ${URL} | grep "Welcome"
-            then
-                # Change this to 0 after the job fails
-              return 0
-            else
-              return 1
-            fi
+  #     - run:
+  #         name: Frontend smoke test
+  #         command: |
+  #           URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+  #           echo ${URL} 
+  #           if curl -s ${URL} | grep "Welcome"
+  #           then
+  #               # Change this to 0 after the job fails
+  #             return 0
+  #           else
+  #             return 1
+  #           fi
 
-      - destroy-environment
-      - revert-migrations
-
-
-
-  cloudfront-update:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            yum install tar gzip npm nodejs -y
-      - run:
-          name: Update cloudfront distribution
-          command: |
-            # your code here
-            export OldWorkflowID=$(aws cloudformation list-exports \
-            --query "Exports[?Name==\`WorkflowID\`].Value" \
-            --no-paginate --output text)
-            echo $OldWorkflowID >> ~/OldWorkflowID.txt
-            aws cloudformation deploy \
-            --template-file .circleci/files/cloudfront.yml \
-            --stack-name InitialStack \
-            --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} \
-            --tags project=udapeople
-      - destroy-environment
-      - revert-migrations
+  #     - destroy-environment
+  #     - revert-migrations
 
 
-  cleanup:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            yum -y install tar gzip
-      - run:
-          name: Get old stack workflow id
-          command: |
-            export OldWorkflowID=$(aws cloudformation \
-            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-            --no-paginate --output text)
-            echo "OldWorkflowID: ${OldWorkflowID}"
-            # Fetch the stack names          
-            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
-                    --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
-            echo "${STACKS}"
-            if [[ "${STACKS[@]}" != "${OldWorkflowID}" ]]
-            then
-              echo "start clean up"
-              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-            else 
-              echo "Cannot cleanup"
-            fi 
-      - revert-migrations
-      - destroy-environment
+
+  # cloudfront-update:
+  #   docker:
+  #     - image: amazon/aws-cli
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           yum install tar gzip npm nodejs -y
+  #     - run:
+  #         name: Update cloudfront distribution
+  #         command: |
+  #           # your code here
+  #           export OldWorkflowID=$(aws cloudformation list-exports \
+  #           --query "Exports[?Name==\`WorkflowID\`].Value" \
+  #           --no-paginate --output text)
+  #           echo $OldWorkflowID >> ~/OldWorkflowID.txt
+  #           aws cloudformation deploy \
+  #           --template-file .circleci/files/cloudfront.yml \
+  #           --stack-name InitialStack \
+  #           --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} \
+  #           --tags project=udapeople
+  #     - destroy-environment
+  #     - revert-migrations
+
+
+  # cleanup:
+  #   docker:
+  #     - image: amazon/aws-cli
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           yum -y install tar gzip
+  #     - run:
+  #         name: Get old stack workflow id
+  #         command: |
+  #           export OldWorkflowID=$(aws cloudformation \
+  #           list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+  #           --no-paginate --output text)
+  #           echo "OldWorkflowID: ${OldWorkflowID}"
+  #           # Fetch the stack names          
+  #           export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+  #                   --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+  #           echo "${STACKS}"
+  #           if [[ "${STACKS[@]}" != "${OldWorkflowID}" ]]
+  #           then
+  #             echo "start clean up"
+  #             aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+  #             aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+  #           else 
+  #             echo "Cannot cleanup"
+  #           fi 
+  #     - revert-migrations
+  #     - destroy-environment
   
 
 
@@ -453,20 +453,20 @@ workflows:
           filters:
             branches:
               only: [master]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
-      - deploy-backend:
-          requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]
+      # - configure-infrastructure:
+      #     requires: [deploy-infrastructure]
+      # - run-migrations:
+      #     requires: [configure-infrastructure]
+      # - deploy-frontend:
+      #     requires: [run-migrations]
+      # - deploy-backend:
+      #     requires: [run-migrations]
+      # - smoke-test:
+      #     requires: [deploy-backend, deploy-frontend]
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - cleanup:
+      #     requires: [cloudfront-update]
       # - add-prometheus-node-exporter:
       #     requires: [smoke-test]
 
